infra/k8s/comments-depl.yaml
# Depoyment resides inside a bucket here called apps/v1
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: aalekhs/comments
---
# no need to specify type as it defaults to clusterIP
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
